Fixes fixes fixes: - Add prop to noValidate form by browser (ours is better obvs...) - Add required attribute to required fields - Make aria-required dynamic if state changes (e.g. by conditionals) - Fix IBAN error message not working properly - Line height of error message to 1.2 - Select: fix empty option now coming from Drupal - Select: fix not validating onBlur - Select: openAfterFocus on select, so no longer ugly focus after focus or clear - Select: re-align arrow and clear a bit - Fix textarea not validating onBlur - Show thank you message by default - Fix checkbox not validating (false is also empty, duh) - Add option for elements to add functionality to required rule with static isEmpty() method

--- a/src/SelectField/styles.pcss
+++ b/src/SelectField/styles.pcss
@@ -119,3 +119,12 @@
   border-bottom-right-radius: var(--borderRadius);
   border-bottom-left-radius: var(--borderRadius);
 }
+
+:global .Select-clear-zone {
+  padding-right: 3px;
+  padding-bottom: 3px;
+}
+
+:global .Select-arrow-zone {
+  padding-top: 5px;
+}
